# Hallucination-Detection-Find-the-Truth

./: .gitignore  README.md  config.py  evaluate.py  predict.py  preprocess.py  pyproject.toml  requirements.txt  train.py  utils.py
configs/: config.yaml  model_registry.yaml
data/general_culture/: dev_subtask3-2.json  dev_subtask3-2_gold.json  train_subtask3-2.json
data/islamic/: dev_subtask3-1.json  dev_subtask3-1_gold.json  train_subtask3-1.json
src/: __init__.py  codabench.py  config.py  data.py  ensemble.py  evaluate.py  main.py  model.py  predict.py  prompts.py  utils.py
tests/: test_evaluate.py  test_utils.py
